feat:add searching logic